@@ -32,7 +32,7 @@
    {%- else -%}
    <tr{% if indent %} class="cg-{{ cgroup }}"{% endif %}>
      <td>{% if collapse -%}
-       <img src="{{ pathto('static/minus.png', 1) }}" id="toggle-{{ cgroup }}"
+       <img src="{{ pathto('_static/minus.png', 1) }}" id="toggle-{{ cgroup }}"
             class="toggler" style="display: none">
          {%- endif %}</td>
      <td>{% if indent %}&nbsp;&nbsp;&nbsp;{% endif %}
