@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% set title = 'Search Documentation' %}
 {% block extrahead %}
-    <script type="text/javascript" src="{{ pathto('static/searchtools.js', 1) }}"></script>
+    <script type="text/javascript" src="{{ pathto('_static/searchtools.js', 1) }}"></script>
 {% endblock %}
 {% block body %}
   <h1 id="search-documentation">Search Documentation</h1>
